fixed gap on client card

--- a/style.css
+++ b/style.css
@@ -198,13 +198,13 @@ button:hover {
 
 .clientReview {
   display: grid;
-  padding: 25px;
+  padding: 15px;
   align-items: center;
   justify-content: center;
   place-items: center;
   min-height: 60vh;
   background-color: bisque;
-  gap: 2px;
+  gap: 10px;
   grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
 }
 
@@ -297,8 +297,9 @@ button:hover {
     width: 60%;
     padding: 20px;
     border-radius: 10px;
-    text-align: right;
+    text-align: center;
     z-index: 999;
+    transition: all 0.7s ease;
   }
 
   header nav ul.show {
@@ -307,5 +308,8 @@ button:hover {
 
   header nav ul li {
     margin: 10px 0;
+  }
+  .clientReview{
+    gap: 20px;
   }
 }
